<menu xmlns:android="http://schemas.android.com/apk/res/android" >
	<item
        android:id="@+id/action_share"
        android:showAsAction="always"
        android:icon="@drawable/share_button"
        android:title="@string/share"/>
	
    <item
        android:id="@+id/action_download"
        android:showAsAction="always"
        android:icon="@drawable/download_button"
        android:title="@string/action_settings">
        <menu >
            <item 
                android:id="@+id/wpres1"
                android:showAsAction="never"
                android:title="@string/wp_res1"/>
            <item 
                android:id="@+id/wpres2"
                android:showAsAction="never"
                android:title="@string/wp_res2"/>
             <item 
                android:id="@+id/wpres3"
                android:showAsAction="never"
                android:title="@string/wp_res3"/>
            <item 
                android:id="@+id/wpres4"
                android:showAsAction="never"
                android:title="@string/wp_res4"/>
        </menu>
        </item>

</menu>
