<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/repeat"
    tools:context=".MediaActivity" >

    <LinearLayout
	    android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:background="#80000000"
		android:paddingLeft="10sp"
        android:paddingRight="10sp"
		android:orientation="vertical">
    

	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:baselineAligned="false"
	        android:paddingTop="30sp"
    		android:paddingBottom="40sp"
	        android:orientation="horizontal">
			 <LinearLayout
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"
		      	android:layout_weight=".40"
		        android:orientation="vertical">
			      <ImageButton
			        android:id="@+id/wallpapers_img"
			        android:contentDescription="@string/wallpaper1"
			        android:layout_width="match_parent"
			        android:adjustViewBounds="true"
					android:scaleType="fitCenter"
			        android:layout_height="wrap_content"
			        android:background="@null"
			        android:src="@drawable/media"/>
			     
			 </LinearLayout>
			  <LinearLayout
		        android:layout_width="0dp"
		        android:layout_height="fill_parent"
		      	android:layout_weight=".60"
		        android:orientation="vertical">
			     
			      <TextView
		            android:id="@+id/txt_wallpapers"
		            android:layout_width="fill_parent"
		            android:layout_height="fill_parent"
		            android:text="@string/title_activity_wallpapers"
    				android:gravity="center"
    				style="@style/TitlesMedium"
    				/>
		           
			 </LinearLayout>

	    </LinearLayout>
	   
	     <View 
		   android:layout_width="fill_parent"
		   android:layout_height="2dp"       
		   android:background="#24B9FF"/>
	    
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:baselineAligned="false"
	        android:paddingTop="40sp"
    		android:paddingBottom="30sp"
	        android:orientation="horizontal">
			 <LinearLayout
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"
		      	android:layout_weight=".40"
		        android:orientation="vertical">
			      <ImageButton
			        android:id="@+id/sonodos_img"
			        android:contentDescription="@string/title_activity_sound"
			        android:layout_width="match_parent"
			        android:adjustViewBounds="true"
					android:scaleType="fitCenter"
			        android:layout_height="wrap_content"
			        android:background="@null"
			        android:src="@drawable/sonidos"/>
			     
			 </LinearLayout>
			  <LinearLayout
		        android:layout_width="0dp"
		        android:layout_height="fill_parent"
		      	android:layout_weight=".60"
		        android:orientation="vertical">
			     
			      <TextView
		            android:id="@+id/txt_media"
		            android:layout_width="fill_parent"
		            android:layout_height="fill_parent"
		            android:text="@string/title_activity_sound"
    				android:gravity="center"
    				style="@style/TitlesMedium"
    				/>
		           
			 </LinearLayout>

	    </LinearLayout>
	    
	    	           	    	
	</LinearLayout>	    	           
    

</ScrollView>
